--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 I'M DANIEL, A FRONTEND DEVELOPER BASED IN ARGENTINA 🇦🇷
             </p>
 
-            <a target="_blank" rel="noopener noreferer" href="./assets/resume-en.pdf" class="anchor">
+            <a target="_blank" rel="noopener noreferer" href="./assets/Resume Daniel Hernandez.pdf" class="anchor">
                 RESUME <svg class="anchor_svg" viewBox="0 0 90 90">
                     <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
                 </svg>
@@ -101,6 +101,7 @@
         </div> -->
         <div class="work_projects">
             <!-- <a class="project to_load">MOOSHU<span>WEB APP</span> </a> -->
+            <a class="project to_load">MOOSHU <span>APP</span> </a>
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
             <a class="project to_load">MOOSHU <span>WEBSITE</span> </a>
             <a class="project to_load">RE-CSSET<span>PACKAGE</span> </a>
@@ -122,7 +123,7 @@
             </div>
             <div class="about_heading_text_wrapper">
                 <h3>DANIEL HERNANDEZ</h3>
-                <h4 class="to_load">FRONTEND DEVELOPER WICH SUPER LIKES COFFEE</h4>
+                <h4 class="to_load">FRONTEND DEVELOPER WHICH SUPER LIKES COFFEE</h4>
             </div>
         </div>
         <p>
@@ -134,12 +135,7 @@
             I'M A DEVELOPER & A FUTURE DESIGNER
         </h4>
         <p>
-            I'M CONVINCED THAT BEING SPECIALIZED IS CRUCIAL
-            TO GIVE VALUE TO PRODUCTS, BUT I ALSO THINK THAT HAVING KNOWLEDGE OR EVEN INTEREST IN OTHER AREAS ALLOWS
-            YOUR WORK TO FLOW WITH A DIFFERENT APPROACH
-        </p>
-        <p>
-            THIS LITTLE INTEREST OR KNOWLEDGE IN DESIGN AND MARKETING HELPS ME TO UNDERSTAND MY WORK FAR MORE. ALSO IT
+            THIS INTEREST IN DESIGN AND MARKETING HELPS ME TO UNDERSTAND MY WORK FAR MORE. ALSO IT
             GIVES ME EMPATHY AND
             UNDERSTANDING ABOUT THE TEAM AND HOW IT WORKS TO DELIVER IT'S ✨ MAJESTIC ✨ PRODUCTS
         </p>
@@ -167,9 +163,14 @@
 
         <div class="contact_content">
             <div class="contact_mail">
-                <p>EMAIL:</p>
-                <p>hi@dherrrnandez.com</p>
+                <p>daniherrrnandez@gmail.com</p>
             </div>
+            <a class="anchor" rel="noopener noreferer" target="_blank" href="./assets/Resume Daniel Hernandez.pdf">
+                RESUME
+                <svg class="anchor_svg" viewBox="0 0 90 90">
+                    <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
+                </svg>
+            </a>
             <a class="anchor" rel="noopener noreferer" target="_blank" href="https://www.linkedin.com/in/dherrrnandez/">
                 LINKEDIN
                 <svg class="anchor_svg" viewBox="0 0 90 90">
@@ -179,13 +180,6 @@
 
             <a class="anchor" rel="noopener noreferer" target="_blank" href="https://github.com/dherrrnandez">
                 GITHUB
-                <svg class="anchor_svg" viewBox="0 0 90 90">
-                    <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                </svg>
-            </a>
-
-            <a class="anchor" rel="noopener noreferer" target="_blank" href="https://www.instagram.com/dherrrnandez/">
-                INSTAGRAM
                 <svg class="anchor_svg" viewBox="0 0 90 90">
                     <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
                 </svg>
@@ -202,7 +196,7 @@
 
 
 
-    <!-- <div MOOSHU class="modal_wrapper">
+    <div MOOSHU class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -220,13 +214,13 @@
 
             <div class="modal_info">
                 <p>
-                    MOOSHU IS WEB CASH REGISTER APP WITH A MINIMAL APPROACH
+                    MOOSHU IS CASH REGISTER APP WITH A MINIMAL APPROACH
                 </p>
 
                 <img class="modal_mockups" src="./assets/mooshu-mockup.jpg">
 
                 <p>
-                    MOOSHU IS MEANT TO BE DEVELOPED AFTER AS AN INTRODUCTORY SOFTWARE FOR THOSE SMALL BUSINESS THAT ARE
+                    MOOSHU IS MEANT TO BE AN INTRODUCTORY SOFTWARE FOR THOSE SMALL BUSINESS THAT ARE
                     WORKING WITHOUT ANY
                     DIGITAL PRODUCT TO MAKE ITS ACTIVITIES EASIER
                 </p>
@@ -246,7 +240,7 @@
                 </a>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div BLUE class="modal_wrapper">
         <div class="modal">
