--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         </div> -->
         <div class="work_projects">
             <!-- <a class="project to_load">MOOSHU<span>WEB APP</span> </a> -->
-            <a class="project to_load">MOOSHU <span>APP</span> </a>
+            <a class="project to_load">NONOTEPAD <span>APP</span> </a>
             <a class="project to_load">BLUE<span>WEBSITE</span> </a>
-            <a class="project to_load">MOOSHU <span>WEBSITE</span> </a>
+            <a class="project to_load">QISINE <span>SOFTWARE</span> </a>
             <a class="project to_load">RE-CSSET<span>PACKAGE</span> </a>
             <a class="project to_load">B-MAKER<span>PROJECT</span> </a>
             <a class="project to_load">CALC<span>PROJECT</span> </a>
@@ -149,7 +149,7 @@
             </a>
         </p>
         <h4 class="to_load">WORKING IN FRONTEND I'VE ALSO USED:</h4>
-        <p>HTML & CSS / JAVASCRIPT / NODE.JS / SASS / GIT / GITHUB / NEXT.JS / SQLITE / ELECTRON / FIGMA / PHOTOSHOP
+        <p>HTML & CSS / JAVASCRIPT / NODE.JS / SASS / GIT / GITHUB / NEXT.JS / SQLITE / CHATGPT / ELECTRON / FIGMA / PHOTOSHOP
             / PIXEL PERFECT / BEM / DRY/ MOBILE FIRST / RESPONSIVE DESIGN / DEPLOYMENT / SEO</p>
     </section>
 
@@ -208,32 +208,29 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>MOOSHU</h3>
+                    <h3>NONO</h3>
                 </div>
             </div>
 
             <div class="modal_info">
                 <p>
-                    MOOSHU IS CASH REGISTER APP WITH A MINIMAL APPROACH
+                    NONOTEPAD IS A MINIMAL NOTE-TAKING APP
                 </p>
 
-                <img class="modal_mockups" src="./assets/mooshu-mockup.jpg">
+                <p>
+                    NONOTEPAD IS MEANT TO BE SIMILAR TO WINDOWS' NATIVE NOTEPAD BUT DARK THEMED. IT'S FOCUS IN SIMPLICITY
+                    MAKES IT EASY TO WORK WITH IN A DAILY BASIS</p>
+
+                    <p>
+                        WE TRIED TO KEEP THE APP AS NATIVE AS POSSIBLE USING INTEGRATED ELECTRON METHODS AND NODEJS MODULES. IT'S BEIGN DEVELOPED TRYING TO KEEP THE BEST PERFORMANCE POSSIBLE WHITIN THE LIMITATIONS OF THE TECHNOLOGIES CHOSEN FOR DEVELOPMENT AND USING AI TO IMPROVE RESULTS AND DEVELOPMENT TIMES
+                    </p>
 
                 <p>
-                    MOOSHU IS MEANT TO BE AN INTRODUCTORY SOFTWARE FOR THOSE SMALL BUSINESS THAT ARE
-                    WORKING WITHOUT ANY
-                    DIGITAL PRODUCT TO MAKE ITS ACTIVITIES EASIER
-                </p>
-
-                <p>IT'S FOCUS IN SIMPLICITY
-                    MAKES IT EASY TO LEARN & EASY TO WORK WITH IN A DAILY BASIS</P>
-
-                <p>
-                    MOOSHU IS CURRENTLY IN DEVELOPMENT
+                    NONOTEPAD IS CURRENTLY IN DEVELOPMENT BUT...
                 </p>
 
                 <a class="anchor" rel="noopener noreferer" target="_blank"
-                    href="https://github.com/dherrrnandez/mooshu">THIS IS THE REPOSITORY
+                    href="https://dherrrnandez.github.io/nonotepad-website/">YOU CAN TRY IY HERE!
                     <svg class="anchor_svg" viewBox="0 0 93 91">
                         <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
                     </svg>
@@ -307,43 +304,19 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>MOOSHU WEBSITE</h3>
+                    <h3>QISINE</h3>
                 </div>
             </div>
 
             <div class="modal_info">
 
                 <p>
-                    THIS IS MOOSHU'S WEBSITE. I'M CURRENTLY DEVELOPING A CASH REGISTER APP AND THIS WOULD BE IT'S
-                    WEBSITE
-                </p>
-
-                <a class="anchor" rel="noopener noreferer" target="_blank"
-                    href="https://dherrrnandez.github.io/mooshu-website/">MOOSHU
-                    <svg class="anchor_svg" viewBox="0 0 93 91">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
-
-                <img class="modal_mockups" src="./assets/mooshu-website-mockup.jpg">
-
-                <p>
-                    I DID EMPHASIS ON KEEPING THE AESTHETIC OF THE MOOSHU PROJECT. THIS WEBSITE IS BUILT WITH VANILLA
-                    JS, AND SASS
-
+                    QISINE IS AN ADMINISTRATIVE SOFTWARE WITH AN INTEGRATED DATABASE AND AN INTUITIVE INTERFACE FOR RESTAURANT MANAGEMENT. DEVELOPED WITH NEXTJS, SQLITE AND ELECTRON
                 </p>
 
                 <p>
-                    I USED ANOTHER PROJECT OF MINE CALLED "RE-CSSET" FOR STYLING AND DEFAULT CROSS-BROWSER
+                    THE SOFTWARE ALLOWS TO MODIFY THE DATABASE, INCLUDE AND DELETE PRODUCTS FROM TABLES, AUTOMATICALLY KEEP TRACK OF QUANTITY OF PRODUCTS AND CALCULATE EACH TABLE'S BILL
                 </p>
-
-                <a class="anchor" rel="noopener noreferer" target="_blank"
-                    href="https://github.com/dherrrnandez/re-csset">RE-CSSET
-                    <svg class="anchor_svg" viewBox="0 0 93 91">
-                        <path d="M22 8.5L92 8.49999M84.5 71L84.5 1M6.34314 85.3431L82.3431 9.34314" stroke-width="16" />
-                    </svg>
-                </a>
-
             </div>
         </div>
     </div>
