--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </button>
                 </div>
                 <div class="modal_title">
-                    <h3>NONO</h3>
+                    <h3>NONO<br>TEPAD</h3>
                 </div>
             </div>
 
@@ -292,7 +292,7 @@
         </div>
     </div>
 
-    <div MOOSHU class="modal_wrapper">
+    <div class="modal_wrapper">
         <div class="modal">
             <div class="modal_header">
                 <div class="modal_close">
@@ -311,12 +311,21 @@
             <div class="modal_info">
 
                 <p>
-                    QISINE IS AN ADMINISTRATIVE SOFTWARE WITH AN INTEGRATED DATABASE AND AN INTUITIVE INTERFACE FOR RESTAURANT MANAGEMENT. DEVELOPED WITH NEXTJS, SQLITE AND ELECTRON
+                    QISINE IS AN ADMINISTRATIVE SOFTWARE WITH AN INTEGRATED DATABASE AND AN INTUITIVE INTERFACE FOR RESTAURANT MANAGEMENT
                 </p>
 
+                <img class="modal_mockups" src="./assets/qisine-mockup-2.jpg">
+                
                 <p>
                     THE SOFTWARE ALLOWS TO MODIFY THE DATABASE, INCLUDE AND DELETE PRODUCTS FROM TABLES, AUTOMATICALLY KEEP TRACK OF QUANTITY OF PRODUCTS AND CALCULATE EACH TABLE'S BILL
                 </p>
+
+                <img class="modal_mockups" src="./assets/qisine-mockup.jpg">
+
+                <p>
+                    DEVELOPED WITH NEXTJS, SQLITE AND ELECTRON. IT USES NEXT DYNAMIC ROUTES TO WORK AND PRISMA TO IMPROVE DATABASE MANAGEMENT
+                </p>
+
             </div>
         </div>
     </div>
