--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
         <div class="hero_info">
             <p>
-                I'M DANIEL, A FRONTEND DEVELOPER BASED IN ARGENTINA 🇦🇷
+                I'M DANIEL, A FRONTEND DEVELOPER BASED IN ARGENTINA
             </p>
 
             <a target="_blank" rel="noopener noreferer" href="./assets/Resume Daniel Hernandez.pdf" class="anchor">
